2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.DiscImages.csproj:
	  Upgrade .NET version to 4.0.

2015-10-19  Natalia Portillo  <claunia@claunia.com>

	* ImagePlugin.cs:
	  Added ATA/ATAPI IDENTIFY DEVICE disk tags.

2015-10-18  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* Apple2MG.cs:
	* TeleDisk.cs:
	* DiskCopy42.cs:
	* DiscImageChef.DiscImages.csproj:
	  Added specific console handling for standard, verbose, debug
	  and error outputs.

2015-10-05  Natalia Portillo  <claunia@claunia.com>

	* VHD.cs:
	* Nero.cs:
	* CDRWin.cs:
	* TeleDisk.cs:
	* Apple2MG.cs:
	* ImageInfo.cs:
	* DiskCopy42.cs:
	* ImagePlugin.cs:
	* ZZZRawImage.cs:
	* Properties/AssemblyInfo.cs:
	* DiscImageChef.DiscImages.csproj:
	  Moved disc image plugins to a separate library.
