@@ -1,3 +1,10 @@
+2015-11-09  Natalia Portillo  <claunia@claunia.com>
+
+	* BFS.cs:
+	  Corrected decoding fields.
+	Added supports for boot sector smaller than device size as in
+	  some Be CDs.
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.Filesystems.csproj:
