@@ -1,3 +1,8 @@
+2015-11-09  Natalia Portillo  <claunia@claunia.com>
+
+	* Main.cs:
+	  Forgot to define Console.Write()
+
 2015-11-05  Natalia Portillo  <claunia@claunia.com>
 
 	* Commands/DeviceInfo.cs:
