@@ -1,3 +1,8 @@
+2015-11-09  Natalia Portillo  <claunia@claunia.com>
+
+	* CDRWin.cs:
+	  Corrected partition start and length calculations.
+
 2015-10-19  Natalia Portillo  <claunia@claunia.com>
 
 	* DiscImageChef.DiscImages.csproj:
